<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/myPurple">

        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card">

            <TextView
                android:id="@+id/text_block_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_block_card"
                android:textColor="#FF0000"
                android:textSize="22sp"
/>

            <TextView
                android:id="@+id/text_deb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/card_deb"
                android:textColor="#3658FF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/num_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_deb"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textColor="#3658FF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/money_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/num_cards"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:textColor="#3658FF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/mir" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/card"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="110dp">

            <Button
                android:id="@+id/replenish"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_replenish"
                android:text="@string/replenish"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/transfer"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_transfer"
                android:text="@string/transfer"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clickHis"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/cards">

        <ImageButton
            android:id="@+id/renPas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/history_operation"
            android:textColor="#3658FF"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/clickHis"
        android:layout_marginTop="-3dp"
        android:background="@color/grey_dark" />

    <RelativeLayout
        android:id="@+id/RelLog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v1">

        <ImageButton
            android:id="@+id/renLog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:onClick="blockCard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/block"
            android:textColor="#3658FF"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/RelLog"
        android:background="@color/grey_dark" />

    <RelativeLayout
        android:id="@+id/RelLoq"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v2">

        <ImageButton
            android:id="@+id/renLoq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/rename_card"
            android:textColor="#3658FF"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>