<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".ProfileActivity">


    <RelativeLayout
        android:id="@+id/HeaderRel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/black_light">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:onClick="backClick"
            android:src="@drawable/arrow_left"/>

        <RelativeLayout
            android:id="@+id/editRel"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgOut"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/user" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/FooterRel"
        android:layout_below="@+id/HeaderRel">

        <RelativeLayout
            android:id="@+id/RelPas"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/renPas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/rename_password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:onClick="renamePassword"
                android:src="@drawable/arrow_right" />


        </RelativeLayout>

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RelPas"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:id="@+id/RelLog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/v1">

            <ImageButton
                android:id="@+id/renLog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/rename_login"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:onClick="renameLogin"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>

        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/RelLog"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:id="@+id/History"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/v2">

            <ImageButton
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:onClick="historyClick"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>

        <View
            android:id="@+id/v3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/History"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:id="@+id/Information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/v3">

            <ImageButton
                android:id="@+id/inf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/information"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:onClick="infClick"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>

        <View
            android:id="@+id/v4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Information"
            android:background="@color/grey_dark" />

        <RelativeLayout
            android:id="@+id/LogOut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/v4">

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:onClick="outClick"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/FooterRel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black_light">

        <RelativeLayout
            android:id="@+id/homeRel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/HomeImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HomeImg"
                android:layout_centerHorizontal="true"
                android:text="@string/text_main_main"
                android:textColor="@color/myPurple"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/payRel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/homeRel">

            <ImageView
                android:id="@+id/PayImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/calculate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PayImg"
                android:layout_centerHorizontal="true"
                android:text="@string/text_main_pay"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hisRel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/payRel">

            <ImageView
                android:id="@+id/HisImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/clock_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HisImg"
                android:layout_centerHorizontal="true"
                android:text="@string/text_main_his"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mesRel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/hisRel">

            <ImageView
                android:id="@+id/MesImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/message_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MesImg"
                android:layout_centerHorizontal="true"
                android:text="@string/text_main_mes"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>